--- a/studentsystem/src/main/resources/application.properties
+++ b/studentsystem/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+# configuration for MySql database
+# https://spring.io/guides/gs/accessing-data-mysql/
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/fullstackStudent
+spring.datasource.username=root
+spring.datasource.password=Mark@123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql: true
